fixed white border bottom on mobile version of nav

--- a/src/components/mobile-drawer-nav/mobileNav.css
+++ b/src/components/mobile-drawer-nav/mobileNav.css
@@ -43,5 +43,6 @@
     margin-left: 20px;
     width: 65%;
     padding: 5px 0;
+    border-bottom: 4px solid #1b262a;
   }
 }
